# rust

./: .env  .env.test  .gitignore  0f11082d-1c39-466d-a464-e7b3ca9f42b4  1.md  2.md  3a135ea2-0a51-4e09-bf06-072de43ec6e1  42edba6f-693f-40fb-ac9d-c3eac8b5ed64  54a53d8a-8b6c-4ad1-a444-e1dae88e96bf  COMMENTING_PROGRESS.md  CONCEPTUAL_EXPLANATIONS_CN.md  Cargo.toml  PROJECT_EPIC_AUTH.md  README.md  abc4e552-1416-4826-b3a9-9f71661853c9  db.sqlite3  ea14c751-0bc1-4ff8-a825-422f7f9da5be  task_manager.db  test_auth_integration.ps1  test_auth_simple.ps1  test_final.ps1  test_jwt_detailed.ps1  test_request.ps1  test_request.py
.cursor/rules/: ceshi.mdc
.docs-cache/: .rustc_info.json  docs_cache.json
.docs-cache/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
.docs-cache/doc/axum/: all.html  attr.debug_handler.html  attr.debug_middleware.html  fn.serve.html  index.html  sidebar-items.js  struct.Error.html  struct.Extension.html  struct.Form.html  struct.Json.html  struct.Router.html  trait.RequestExt.html  trait.RequestPartsExt.html  trait.ServiceExt.html  type.BoxError.html
.docs-cache/doc/axum_core/: all.html  index.html  struct.Error.html  trait.RequestExt.html  trait.RequestPartsExt.html  type.BoxError.html
.docs-cache/doc/axum_macros/: all.html  attr.debug_handler.html  attr.debug_middleware.html  derive.FromRef.html  derive.FromRequest.html  derive.FromRequestParts.html  derive.TypedPath.html  index.html
.docs-cache/doc/axum_tutorial/: all.html  fn.main.html  index.html  sidebar-items.js
.docs-cache/doc/bytes/: struct.Bytes.html  struct.BytesMut.html
.docs-cache/doc/data_encoding/: all.html  constant.BASE32.html  constant.BASE32HEX.html  constant.BASE32HEX_NOPAD.html  constant.BASE32_DNSCURVE.html  constant.BASE32_DNSSEC.html  constant.BASE32_NOPAD.html  constant.BASE32_NOPAD_NOCASE.html  constant.BASE32_NOPAD_VISUAL.html  constant.BASE64.html  constant.BASE64URL.html  constant.BASE64URL_NOPAD.html  constant.BASE64_MIME.html  constant.BASE64_MIME_PERMISSIVE.html  constant.BASE64_NOPAD.html  constant.HEXLOWER.html  constant.HEXLOWER_PERMISSIVE.html  constant.HEXUPPER.html  constant.HEXUPPER_PERMISSIVE.html  enum.BitOrder.html  enum.DecodeKind.html  index.html  struct.DecodeError.html  struct.DecodePartial.html  struct.Display.html  struct.Encoder.html  struct.Encoding.html  struct.Specification.html  struct.SpecificationError.html  struct.Translate.html  struct.Wrap.html
.docs-cache/doc/deranged/: all.html  index.html  struct.OptionRangedI128.html  struct.OptionRangedI16.html  (+24 more)
migration/: Cargo.toml
migration/src/: lib.rs  m20250610_035426_create_task_table.rs  m20250615_075512_create_users_table.rs  m20250615_081240_add_user_id_to_tasks.rs  task_entity.rs  user_entity.rs
src/: CONCEPT.md  FLOWCHART.md  config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  startup.rs
src/app/: CONCEPT.md  FLOWCHART.md  mod.rs  state.rs
static/: index.html
static/js/: api-client.js  auth-manager.js  task-manager.js
tests/: auth_integration_test.rs  auth_tests.rs  jwt_middleware_integration.rs  migration_tests.rs  task_api_tests.rs  task_repository_tests.rs  task_tests.rs
tests/common/: mod.rs
(+19196 files in other folders)
