[workspace]
members = [".", "migration"]

[package]
name = "axum-tutorial"
version = "0.1.0"
edition = "2024"
authors = ["Rust学习者"]
description = "Axum框架的分层架构学习项目"

[dependencies]
# Axum Web 框架核心组件
axum = { version = "0.7.5", features = ["ws", "macros"] }
# axum-extra = { version = "0.9.3", features = ["spa"] }
# Tokio 异步运行时
tokio = { version = "1.37.0", features = ["full"] }
# 序列化与反序列化库
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 唯一ID生成
uuid = { version = "1.8.0", features = ["v4", "serde"] }
# 日志与跟踪
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# HTTP 工具库
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace", "cors", "fs"] }
# HTTP/3 支持（可选功能）
quinn = "0.10"
h3 = "0.0.4"
h3-quinn = "0.0.4"
# TLS 支持
rustls = "0.22"
tokio-rustls = "0.25"
# 证书生成工具（用于 HTTP/3 演示）
rcgen = "0.12"
# 同步原语
parking_lot = "0.12"
# SeaORM
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
# 迁移 Crate
migration = { path = "migration" }
anyhow = "1.0.82"
chrono = { version = "0.4.41", features = ["serde"] }
# 异步 Trait 支持
async-trait = "0.1"

# --- 认证与验证功能新增依赖 ---
# 输入验证
validator = { version = "0.18", features = ["derive"] }
# 密码哈希 - 使用 Argon2 (更安全的现代密码哈希算法)
argon2 = { version = "0.5", features = ["password-hash"] }
# JSON Web Token (JWT)
jsonwebtoken = "9.3"
# --- 认证与验证功能新增依赖结束 ---

[dev-dependencies]
anyhow = "1.0.82"
httpc-test = "0.1.9"
sea-orm-cli = "0.12"
reqwest = "0.12.4"
once_cell = "1.19.0"
wiremock = "0.6.0"
serde_json = "1.0.117"
dotenvy = "0.15"
fake = { version = "2.9", features = ["chrono"] }
# 模拟测试库
mockall = "0.12" 
